--- a/Manpower_MVC/Views/Shared/_Layout.cshtml
+++ b/Manpower_MVC/Views/Shared/_Layout.cshtml
@@ -1,43 +1,95 @@
-﻿<!DOCTYPE html>
+﻿@using System.Web.Optimization
+<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - 我的 ASP.NET 應用程式</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>
+        @if (!string.IsNullOrWhiteSpace(ViewBag.Title)) {
+            @ViewBag.Title@: -
+        }
+        益昇貨運管理系統 
+    </title>
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <link href="~/Content/css/font-awesome.min.css" rel="stylesheet">
+    <link href="~/Content/css/icheck/blue.min.css" rel="stylesheet">
+    @Styles.Render("~/Bundles/css")
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 </head>
-<body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("應用程式名稱", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("首頁", "Index", "Home")</li>
-                    <li>@Html.ActionLink("關於", "About", "Home")</li>
-                    <li>@Html.ActionLink("連絡方式", "Contact", "Home")</li>
-                </ul>
-            </div>
+<body class="hold-transition skin-blue sidebar-mini">
+    <div class="wrapper">
+        @Html.Partial("_Header")
+        @Html.Partial("_Sidebar")
+
+        <div class="content-wrapper">
+            <section class="content-header">
+                <h1>
+                    @ViewBag.Title
+                    <small>@ViewBag.Description</small>
+                </h1>
+            </section>
+
+            <section class="content">
+                @RenderBody()
+            </section>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - 我的 ASP.NET 應用程式</p>
-        </footer>
+
+        @Html.Partial("_ControlSidebar")
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    @{ Html.RenderPartial("_Scripts"); }
+    @RenderSection("pagesection", false)
+
+    <script>
+        // Shift 的鍵盤代碼是 16，Ctrl 的鍵盤代碼是 17，Alt 的鍵盤代碼是 18
+        function keyFunction() {
+            //// 若不加第二個條件，會印出兩次警告視窗
+            //// 一次是按 Shift，第二次是按其他鍵
+            //if ((event.shiftKey) && (event.keyCode != 16))
+            //    alert("Shift + " + event.keyCode);
+            //if ((event.ctrlKey) && (event.keyCode != 17))
+            //    alert("Ctrl + " + event.keyCode);
+
+
+            if ((event.altKey) && (event.keyCode == 49)) {
+                window.location.href = '/Home/a01';
+            }
+            if ((event.altKey) && (event.keyCode == 50)) {
+                window.location.href = '/Home/a11';
+            }
+            if ((event.altKey) && (event.keyCode == 51)) {
+                window.location.href = '/Home/a21';
+            }
+            if ((event.altKey) && (event.keyCode == 52)) {
+                window.location.href = '/Home/a31';
+            }
+            if ((event.altKey) && (event.keyCode == 53)) {
+                window.location.href = '/Home/b01';
+            }
+            if ((event.altKey) && (event.keyCode == 54)) {
+                window.location.href = '/Home/b11';
+            }
+            if ((event.altKey) && (event.keyCode == 55)) {
+                window.location.href = '/Home/b21';
+            }
+
+
+            // focus on search field
+            if ((event.altKey) && (event.keyCode == 83)) {
+                $("input[type='search']").focus()
+            }
+            
+            if (event.keyCode == 13) // enter => focus 在Table的第一個Cell
+            {
+                if ($('table').find('td.focus').length == 0)
+                    $('table').DataTable().cell(':eq(0)').focus();
+            }
+        }
+
+        document.onkeydown = keyFunction;
+    </script>
 </body>
 </html>
