--- a/Manpower_MVC/Views/Home/a01Ins.cshtml
+++ b/Manpower_MVC/Views/Home/a01Ins.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "新增點工人事資料";
 }
 
-<form method="post" action="@Url.Action("Create")>
+<form method="post" action="@Url.Action("a01Ins")">
+
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
