--- a/Manpower_MVC/Views/Shared/_Header.cshtml
+++ b/Manpower_MVC/Views/Shared/_Header.cshtml
@@ -2,9 +2,9 @@
     @* BEGIN Logo *@
     <a href="@Url.Action("Index", "Home")" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
-        <span class="logo-mini">益昇</span>
+        <span class="logo-mini">全域 </span>
         <!-- logo for regular state and mobile devices -->
-        <span class="logo-lg">益昇貨運管理系統</span>
+        <span class="logo-lg">全域人力管理系統 </span>
     </a>
     @* END Logo *@
     @* BEGIN Header *@
