--- a/Manpower_MVC/Views/Shared/_Layout.cshtml
+++ b/Manpower_MVC/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
         @if (!string.IsNullOrWhiteSpace(ViewBag.Title)) {
             @ViewBag.Title@: -
         }
-        益昇貨運管理系統 
+        全域人力管理系統 
     </title>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <link href="~/Content/css/font-awesome.min.css" rel="stylesheet">
