--- a/Manpower_MVC/Views/Employee/Edit.cshtml
+++ b/Manpower_MVC/Views/Employee/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Manpower_MVC.Models.Employee
 
 @{
-    ViewBag.Title = "人事資料管理";
+    ViewBag.Title = "人事資料";
 }
 
 <form method="post" action="@Url.Action("Edit")">
