--- a/Manpower_MVC/Views/Home/Index.cshtml
+++ b/Manpower_MVC/Views/Home/Index.cshtml
@@ -1,31 +1,59 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "全域人力管理系統";
+    ViewBag.Description = "人事資料";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
 
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="box">
+        <div class="box-body">
+            <div class="hide-on-desktop">
+                <img src="~/Content/img/index.png" style="height: auto; width: 100%;">
+            </div>
+            <div class="hide-on-mobile">
+                <img src="~/Content/img/index2.png" style="height: auto; width: 100%;">
+            </div>
+            <div class="col-md-2 col-xs-12"></div>
+            <div class="col-md-2 col-xs-12" style="padding: 20px 0px;">
+                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='../Employee/Index'">人事資料</button>
+                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='../WorkCare/Index'">工種薪資</button>
+                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='../Owner/Index'">業主資料</button>
+                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='Home/a31'">貨品基本</button>
+            </div>
+            <div class="col-md-4 col-xs-12">
+                <a href="Home/b01"><img src="~/Content/img/indexcar.png" style="height: auto; width: 100%; padding: 20px;"></a>
+            </div>
+            <div class="col-md-2 col-xs-12" style="padding: 20px 0px;">
+                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='Home/b11'">付款作業</button>
+                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='Home/b21'">請款作業</button>
+            </div>
+            <div class="col-md-2 col-xs-12"></div>
+        </div>
     </div>
 </div>
+
+<script>
+  $(document).ready(function(){
+    $(document).keydown(function(e){
+      //console.log(e.keyCode); 印出按鍵是否被按下
+      switch(e.keyCode) {
+        case 113: //F2
+          $("#add").modal('show');
+          break;
+        case 114: //F3
+          $("#modify").modal('show');
+          break;
+        case 115: //F4
+          break;
+        case 116: //F5
+          break;
+        case 117: //F6
+          break;
+        //location.href='a02.html'; 開網頁
+        //$("#print").modal('show'); 開外掛視窗
+        //$("#print").modal('hide'); 關閉外掛視窗
+        //$("#print").on('shown.bs.modal',function(e){do something}); 外掛視窗內的動作
+      }
+    });
+  });
+</script>	
