--- a/Manpower_MVC/Views/WorkCare/Index.cshtml
+++ b/Manpower_MVC/Views/WorkCare/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <p>
-    <h2>工種薪資列表</h2>
+    <h4>工種薪資列表</h4>
 </p>
 <table class="table">
     <tr>
@@ -59,5 +59,5 @@
 
 </table>
 <p>
-    @Html.ActionLink("新增工種薪資資料", "Create")
+    @Html.ActionLink("新增工種薪資", "Create")
 </p>
