--- a/Manpower_MVC/Views/Home/Index.cshtml
+++ b/Manpower_MVC/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                 <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='../Employee/Index'">人事資料</button>
                 <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='../WorkCare/Index'">工種薪資</button>
                 <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='../Owner/Index'">業主資料</button>
-                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='Home/a31'">貨品基本</button>
+                <button type="button" class="btn btn-block btn-warning btn-lg" onclick="location.href='../OwnerPay/Index'">業主工種請款</button>
             </div>
             <div class="col-md-4 col-xs-12">
                 <a href="Home/b01"><img src="~/Content/img/indexcar.png" style="height: auto; width: 100%; padding: 20px;"></a>
