WorkList CRUD uncheck & _Layout 更新
實作 業主工種請款 查詢、新增、編輯、刪除 (未檢查
_Layout 更新

--- a/Manpower_MVC/Views/Shared/_Layout.cshtml
+++ b/Manpower_MVC/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
         @Html.Partial("_Header")
         @Html.Partial("_Sidebar")
 
-        <div class="content-wrapper">
+        <div class="content-wrapper" style="min-height: 600px;">
             <section class="content-header">
                 <h1>
                     @ViewBag.Title
