--- a/Manpower_MVC/Views/WorkList/EditWorker.cshtml
+++ b/Manpower_MVC/Views/WorkList/EditWorker.cshtml
@@ -76,7 +76,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Remark, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <textarea class="form-control" id="Remark" name="Remark" rows="3" placeholder="備註..."></textarea>
+                @Html.TextAreaFor(model => model.Remark, new { @class = "form-control", rows = "3", placeholder = "備註..." })
                 @Html.ValidationMessageFor(model => model.Remark, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -90,5 +90,5 @@
 }
 
 <div>
-    @Html.ActionLink("返回工人列表", "ListWorker", new { listId = Model.ListID })
+    @Html.ActionLink("返回工人列表", "ListWorker", new { listId = ViewBag.listId })
 </div>
