--- a/Manpower_MVC/Views/Owner/Create.cshtml
+++ b/Manpower_MVC/Views/Owner/Create.cshtml
@@ -10,7 +10,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Owner</h4>
+        <h4>業主基本資料</h4>
         <hr />
         @Html.ValidationSummary(false, "", new { @class = "text-danger" })
         <div class="form-group">
