--- a/Manpower_MVC/Views/Owner/Edit.cshtml
+++ b/Manpower_MVC/Views/Owner/Edit.cshtml
@@ -10,7 +10,7 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Owner</h4>
+        <h4>業主基本資料</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
