--- a/Manpower_MVC/Views/WorkList/EditWorker.cshtml
+++ b/Manpower_MVC/Views/WorkList/EditWorker.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "每日工單輸入";
 }
 
-<h2>編輯工人</h2>
+<h4>編輯工人</h4>
 
 
 @using (Html.BeginForm())
@@ -19,7 +19,7 @@
         <div class="form-group">
             <label class="control-label col-md-2">工單流水編號</label>
             <div class="col-md-10">
-                <input class="form-control" readonly="readonly" value="ViewBag.serialNum" />
+                <input class="form-control" readonly="readonly" value="@ViewBag.serialNum" />
             </div>
         </div>
 
