--- a/Manpower_MVC/Views/OwnerPay/Index.cshtml
+++ b/Manpower_MVC/Views/OwnerPay/Index.cshtml
@@ -3,15 +3,25 @@
 @{
     ViewBag.Title = "業主工種請款";
 }
+
 <h4>請款列表</h4>
 
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.PayID)
+            @Html.DisplayNameFor(model => model.OwnerID)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.OwnerName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.OwnerTel)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ConPerson)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ConPersonTel)
         </th>
         <th></th>
     </tr>
@@ -19,20 +29,30 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.PayID)
+            @Html.DisplayFor(modelItem => item.OwnerID)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.OwnerName)
         </td>
         <td>
-            @Html.ActionLink("請款工種列表", "ListPayWork", new { id = item.ID }) |
-            @Html.ActionLink("編輯", "EditPayment", new { id = item.ID }) |
-            @Html.ActionLink("刪除", "DeletePayment", new { id = item.ID })
+            @Html.DisplayFor(modelItem => item.OwnerTel)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ConPerson)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ConPersonTel)
+        </td>
+        <td>
+            @Html.ActionLink("請款工種列表", "ListPayWork", new { id=item.ID }) |
+            @Html.ActionLink("更新", "EditPayment", new { id=item.ID }) |
+            @Html.ActionLink("刪除", "DeletePayment", new { id=item.ID })
         </td>
     </tr>
 }
 
 </table>
+
 <p>
-    @Html.ActionLink("新增請款", "CreatePayment")
+    @Html.ActionLink("建立請款", "CreatePayment")
 </p>
