Models & Views 更新

--- a/Manpower_MVC/Views/EmpSal/EmpSalDetail.cshtml
+++ b/Manpower_MVC/Views/EmpSal/EmpSalDetail.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Manpower_MVC.ViewModels.ViewEmpSalDetail>
 
 @{
-    ViewBag.Title = "EmpSalDetail";
+    ViewBag.Title = "員工薪資";
 }
 
-<h2>EmpSalDetail</h2>
+<h4>員工薪資細項</h4>
 
 <table class="table">
     <tr>
@@ -28,3 +28,7 @@
 }
 
 </table>
+
+<p>
+    @Html.ActionLink("返回員工薪資列表", "Index")
+</p>
