--- a/Manpower_MVC/Views/EmpSal/Index.cshtml
+++ b/Manpower_MVC/Views/EmpSal/Index.cshtml
@@ -1,14 +1,11 @@
 ﻿@model IEnumerable<Manpower_MVC.ViewModels.ViewEmpSal>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "員工薪資";
 }
 
-<h2>Index</h2>
+<h4>員工薪資列表</h4>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
@@ -35,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.Year)年 @Html.DisplayFor(modelItem => item.Month)月
         </td>
         <td>
-            @Html.ActionLink("Detail", "EmpSalDetail", new { year = item.Year , month = item.Month })
+            @Html.ActionLink("員工薪資細項", "EmpSalDetail", new { year = item.Year , month = item.Month })
         </td>
     </tr>
 }
