--- a/Manpower_MVC/Views/EmpSal/Index.cshtml
+++ b/Manpower_MVC/Views/EmpSal/Index.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.Year)年 @Html.DisplayFor(modelItem => item.Month)月
         </td>
         <td>
-            @Html.ActionLink("員工薪資細項", "EmpSalDetail", new { year = item.Year , month = item.Month })
+            @Html.ActionLink("員工薪資細項", "EmpSalDetail", new {id = item.ID , year = item.Year , month = item.Month })
         </td>
     </tr>
 }
