--- a/Manpower_MVC/Views/OwnerPay/ListPayWork.cshtml
+++ b/Manpower_MVC/Views/OwnerPay/ListPayWork.cshtml
@@ -71,7 +71,7 @@
 </table>
 
 <p>
-    @Html.ActionLink("建立請款工種", "CreatePayWork")
+    @Html.ActionLink("建立請款工種", "CreatePayWork", new { id = ViewBag.payId })
 </p>
 
 <p>
