--- a/Manpower_MVC/Views/Employee/CreateEmpIns.cshtml
+++ b/Manpower_MVC/Views/Employee/CreateEmpIns.cshtml
@@ -1,41 +1,30 @@
 ﻿@model Manpower_MVC.Models.EmpInsurance
 
 @{
-    ViewBag.Title = "人事勞健加減項";
+    ViewBag.Title = "勞健加減項";
 }
+
+<h2>CreateEmpIns</h2>
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>勞健加減項</h4>
+        <h4>EmpInsurance</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="form-group">
             @Html.LabelFor(model => model.InsID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.InsID, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.InsID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.InsName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.InsName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.InsName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.PosOrNeg, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <select name="PosOrNeg" id="PosOrNeg" class="form-control">
-                    <option value="加項">加項</option>
-                    <option value="減項">減項</option>
+                <select id="InsID" name="InsID" class="form-control">
+                    @foreach (var item in ViewBag.InsCate)
+                    {
+                        <option value="@item.ID">@item.InsName</option>
+                    }
                 </select>
-                @Html.ValidationMessageFor(model => model.PosOrNeg, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.InsID, "", new { @class = "text-danger" })
             </div>
         </div>
 
