--- a/Manpower_MVC/Views/printMonthSal/Index.cshtml
+++ b/Manpower_MVC/Views/printMonthSal/Index.cshtml
@@ -6,7 +6,7 @@
 
 <form method="post" action="@Url.Action("Index")">
     <p>
-        <input type="month" name="date" id="date" />
+        <input type="month" name="date" id="date" value=""/>
     </p>
     <p>
         <input type="submit" value="顯示總表" class="btn btn-primary" name="sub" id="sub" />
@@ -121,3 +121,14 @@
 
     </table>
 </div>
+<script>
+    var date = new Date();
+
+    var month = date.getMonth() + 1;
+    var year = date.getFullYear();
+
+    if (month < 10) month = "0" + month;
+
+    var today = year + "-" + month;
+    document.getElementById("date").value = today;
+</script>
