--- a/Manpower_MVC/Views/printMonthSal/Print.cshtml
+++ b/Manpower_MVC/Views/printMonthSal/Print.cshtml
@@ -8,11 +8,12 @@
 
 <html>
 <head>
+    <meta name="viewport" content="width=device-width" />
     <link href="~/Content/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/Content/css/icheck/blue.min.css" rel="stylesheet">
     @Styles.Render("~/Bundles/css")
 </head>
-<body onload="window.print()">
+<body onload="window.print(); window.close();">
     <div>
         <p>
             <h2>@ViewBag.year/@ViewBag.month  月份員工薪資總表</h2>
