部分網頁整合
月份員工薪資總表 in 點工薪資一覽
PrintController 獨立

--- a/Manpower_MVC/Views/EmpSal/Print.cshtml
+++ b/Manpower_MVC/Views/EmpSal/Print.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Manpower_MVC.ViewModels.ViewMonthSal>
+﻿@model IEnumerable<Manpower_MVC.ViewModels.ViewPrintMonthSal>
 
 @{
     Layout = null;
@@ -8,6 +8,7 @@
 
 <html>
 <head>
+    <title>@ViewBag.year/@ViewBag.month  月份員工薪資總表</title>
     <meta name="viewport" content="width=device-width" />
     <link href="~/Content/css/font-awesome.min.css" rel="stylesheet">
     <link href="~/Content/css/icheck/blue.min.css" rel="stylesheet">
