--- a/Manpower_MVC/Views/EmpSal/Index.cshtml
+++ b/Manpower_MVC/Views/EmpSal/Index.cshtml
@@ -6,6 +6,15 @@
 
 <h4>員工薪資列表</h4>
 
+<form method="get" target="_blank" action="@Url.Action("Print")">
+    <p>
+        <input type="month" name="date" id="date" value="" />
+    </p>
+    <p>
+        <input type="submit" value="列印月份總表" class="btn btn-success" name="print" id="print" />
+    </p>
+</form>
+
 <table class="table">
     <tr>
         <th>
@@ -38,3 +47,15 @@
 }
 
 </table>
+
+<script>
+    var date = new Date();
+
+    var month = date.getMonth() + 1;
+    var year = date.getFullYear();
+
+    if (month < 10) month = "0" + month;
+
+    var today = year + "-" + month;
+    document.getElementById("date").value = today;
+</script>
