--- a/Manpower_MVC/Views/WorkList/EditWorkList.cshtml
+++ b/Manpower_MVC/Views/WorkList/EditWorkList.cshtml
@@ -1,17 +1,17 @@
 ﻿@model Manpower_MVC.Models.WorkList
 
 @{
-    ViewBag.Title = "每日工單輸入";
+    ViewBag.Title = "EditWorkList";
 }
 
-<h4>編輯工單</h4>
-
+<h2>EditWorkList</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
+        <h4>WorkList</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.ID)
@@ -33,31 +33,15 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2">業主</label>
+            @Html.LabelFor(model => model.BuildingID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <select name="OwnerID" id="OwnerID" class="form-control">
-                    @foreach (var item in ViewBag.owner)
+                <select name="BuildingID" id="BuildingID" class="form-control">
+                    @foreach (var item in ViewBag.building)
                     {
-                        <option value="@item.ID">@item.OwnerName</option>
+                        <option value="@item.ID">@item.BuildingName</option>
                     }
                 </select>
-                @Html.ValidationMessageFor(model => model.OwnerID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.BuildName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.BuildName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.BuildName, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ConPerson, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ConPerson, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ConPerson, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.BuildingID, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -70,5 +54,5 @@
 }
 
 <div>
-    @Html.ActionLink("返回工單列表", "Index")
+    @Html.ActionLink("Back to List", "Index")
 </div>
